Substitui toList() por collect(Collectors.toList()) para compatibilidade com Java Streams